--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "vite": "^5.4.6"
+    "vite": "^5.4.6",
+    "nodemon": "^3.1.7"
   }
 }
