--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
+    "@types/pg": "^8.11.10",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
     "class-variance-authority": "^0.7.0",
@@ -57,6 +58,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
@@ -72,6 +74,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "zod": "^3.23.8"
@@ -79,7 +82,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^20.16.11",
+    "@types/node": "^20.17.6",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.12",
@@ -92,6 +95,6 @@
     "tailwindcss": "^3.4.15",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "vite": "^5.4.6"
+    "vite": "^5.4.11"
   }
 }
